--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
 
     <!-- Hero Section with Monochrome Background -->
     <section id="hero">
+
         <div class="hero-content">
             <h1><span id="typed-text"></span><span class="cursor">|</span></h1>
-            <p>Equipping students with the skills to manage their finances confidently.</p>
+            <p>Finance Fluent is developing an innovative platform designed to foster collaboration among students on the significance of financial literacy. Through engaging videos, informative articles, and dynamic presentations, we aim to equip students with the essential skills needed to manage their finances confidently and prepare for their futures. As an emerging non-profit organization, Finance Fluent is driven by a vision of empowering students to achieve financial competence and independence.</p>
             <a href="#programs" class="cta-button">Learn More</a>
         </div>
         <!-- Cool Background Elements -->
-        <div class="moving-bg">
-            <div class="circle one"></div>
-            <div class="circle two"></div>
-            <div class="circle three"></div>
+
+        <div class="logo-container">
+            <img src="IMG_6344.jpg" alt="Organization Logo" id="hero-logo">
         </div>
     </section>
     
