--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#programs">Our Programs</a></li>
-                    <li><a href="#faq">FAQs</a></li>
+                    <li><a href="#members">Members</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact Us</a></li>
                 </ul>
@@ -43,10 +43,80 @@
         <!-- Cool Background Elements -->
 
         <div class="logo-container">
-            <img src="IMG_6344.jpg" alt="Organization Logo" id="hero-logo">
+            <img src="logo.jpg" alt="Organization Logo" id="hero-logo">
         </div>
+
     </section>
     
+    <section id="curriculum">
+        <div class="curriculum-container">
+            <h2>Our Curriculum</h2>
+            <p>We provide an in-depth and engaging curriculum designed to help students master finance topics.</p>
+            <div class="curriculum-cards">
+                <div class="curriculum-card">
+                    <h3>Investing</h3>
+                    <p>Investing involves allocating money to various financial assets, such as stocks, bonds, or real estate, with the expectation of generating a return over time. It is a way to grow wealth and achieve long-term financial goals, but it also involves risks that must be carefully managed.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Saving</h3>
+                    <p>Saving is the practice of setting aside a portion of income for future use, often to build an emergency fund or to achieve specific financial goals. Effective saving can be enhanced by utilizing savings accounts that offer interest, which helps money grow over time through compound interest.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Insurance</h3>
+                    <p>Insurance is a financial product that provides protection against potential financial losses from unexpected events, such as accidents, illness, or damage to property. Different types of insurance, including health, auto, and life insurance, serve to mitigate risks and ensure financial security.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+                <div class="curriculum-card">
+                    <h3>Taxes</h3>
+                    <p>Taxes are compulsory contributions imposed by governments on individuals and businesses to fund public services and infrastructure. Understanding the basics of income tax, including different tax brackets and deductions, is essential for effective financial planning and compliance.</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <!-- About Section -->
     <section id="about" class="fade-in-section">
